--- a/templates/aboutUS.html
+++ b/templates/aboutUS.html
@@ -23,43 +23,199 @@
                                 <span class="and">AND</span>
                                 <span class="Succeed">SUCCEED</span>
                             </p>
+                            <h1 style="color:white">With Us</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="why-skillup">
-            <h2>Why Skillup</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-2">
-                        <div class="card">
-                            <h5>Best Instructor</h5>
+            <center><h2 style="margin-bottom:45px">Why Skillup</h2></center>
+            
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="card-img">
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-content">
+                                    <h5>Best Instructor</h5>
+                                    <p>
+                                        In the video, I showed how to create a 
+                                        responsive card slider using HTML, CSS, 
+                                        and JavaScript.This slider allows users 
+                                        to navigate through the cards using slider 
+                                    </p>
+                                </div>
+                            </div>
+                            {% comment %} <div class="col-md-2">
+                                
+                            </div>
+                            <div lass="col-md-8">
+                                <div class="card-content">
+                                    <h5>Best Instructor</h5>
+                                    <p>
+                                        In the video, I showed how to create a 
+                                        responsive card slider using HTML, CSS, 
+                                        and JavaScript.This slider allows users 
+                                        to navigate through the cards using slider 
+                                    </p>
+                                </div>
+                            </div> {% endcomment %}
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="card">
-                            <h5>Best Instructor</h5>
+                    <div class="col-md-6">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="card-img">
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-content">
+                                    <h5>Best Instructor</h5>
+                                    <p>
+                                        In the video, I showed how to create a 
+                                        responsive card slider using HTML, CSS, 
+                                        and JavaScript.This slider allows users 
+                                        to navigate through the cards using slider 
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="card">
-                            <h5>Trend as Experiance</h5>
+                    <div class="col-md-6">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="card-img">
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-content">
+                                    <h5>Best Instructor</h5>
+                                    <p>
+                                        In the video, I showed how to create a 
+                                        responsive card slider using HTML, CSS, 
+                                        and JavaScript.This slider allows users 
+                                        to navigate through the cards using slider 
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="card">
-                            <h5>Focuses On Logic Building</h5>
+                    <div class="col-md-6">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="card-img">
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="card-content">
+                                    <h5>Best Instructor</h5>
+                                    <p>
+                                        In the video, I showed how to create a 
+                                        responsive card slider using HTML, CSS, 
+                                        and JavaScript.This slider allows users 
+                                        to navigate through the cards using slider 
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="card">
-                            <h5>Find Optimal Solution</h5>
-                        </div>
+                    <div class="col-md-6">
                     </div>
-                    <div class="col-md-2">
-                        <div class="card">
-                            <h5>Provide Easy Notes</h5>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="our-team">
+            <div class="row">
+                <div class="col-md-12">
+                   <center> <h2>Our Team<h2></center>
+                    <div class="team-cards">
+                        <div classs="swiper">
+                            <div class="slider-wrapper">
+                                <div class="row">
+
+                                    <div class="col-md-4">
+                                        <div class="card-list swiper-wrapper">
+                                            <div class="card-item swiper-slide">
+                                                <img class="user-image" src="static/images/nidhi.jpg">
+                                                <h2 class="user-name">SANTOSHI</h2>
+                                                <p class="user-course">web Development</p>
+                                                <p class="user-review">
+                                                    In the video, I showed how to create a responsive card slider using HTML, 
+                                                    CSS, and JavaScript. This slider allows users to navigate through the cards 
+                                                    using slider buttons or pagination. To make it a modern, 
+                                                    touch-friendly, and responsive slider, I used SwiperJS, the leading slider library.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <div class="card-list swiper-wrapper">
+                                            <div class="card-item swiper-slide">
+                                                <img class="user-image" src="static/images/nidhi.jpg">
+                                                <h2 class="user-name">POONAM PAL</h2>
+                                                <p class="user-course">web Development</p>
+                                                <p class="user-review">
+                                                    In the video, I showed how to create a responsive card slider using HTML, 
+                                                    CSS, and JavaScript. This slider allows users to navigate through the cards 
+                                                    using slider buttons or pagination. To make it a modern, 
+                                                    touch-friendly, and responsive slider, I used SwiperJS, the leading slider library.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <div class="card-list swiper-wrapper">
+                                            <div class="card-item swiper-slide">
+                                                <img class="user-image" src="static/images/nidhi.jpg">
+                                                <h2 class="user-name">NIDHI PAL</h2>
+                                                <p class="user-course">web Development</p>
+                                                <p class="user-review">
+                                                    In the video, I showed how to create a responsive card slider using HTML, 
+                                                    CSS, and JavaScript. This slider allows users to navigate through the cards 
+                                                    using slider buttons or pagination. To make it a modern, 
+                                                    touch-friendly, and responsive slider, I used SwiperJS, the leading slider library.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
