--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,3 +1,10 @@
 {% load static %}
 {% include "header.html"%}
+    <section classs="middle">
+        <div class="courses">
+            <div class="">
+            </div>
+        </div>
+    </section>
+
 {% include "footer.html"%}
