--- a/templates/header.html
+++ b/templates/header.html
@@ -30,31 +30,33 @@
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarNav">
                                     <ul class="navbar-nav">
-                                        <li class="nav-item active top-nav-item">
-                                            <a class="nav-link" href='/'>Home</a>
+                                        <li class="nav-item top-nav-item">
+                                            <a class="nav-link {% if request.path == '/'%} active {% endif %}" href='/'>Home</a>
                                         </li>
                                         <li class="nav-item top-nav-item">
-                                            <a class="nav-link" href='/aboutUS/'>About-Us</a>
+                                            <a class="nav-link {% if request.path == '/aboutUS/'%} active {% endif %}" href='/aboutUS/'>About-Us</a>
                                         </li>
                                         <li class="nav-item top-nav-item">
-                                            <a class="nav-link" href='/courses/'>Courses</a>
+                                            <a class="nav-link {% if request.path == '/courses/'%} active {% endif %}" href='/courses/'>Courses</a>
                                         </li>
                                         <li class="nav-item top-nav-item">
-                                            <a class="nav-link" href='/contact/'>Contact-Us</a>
+                                            <a class="nav-link {% if request.path == '/contact/'%} active {% endif %}" href='/contact/'>Contact-Us</a>
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="collapse navbar-collapse right" id="navbarNav">
+
+                                <div class="collapse navbar-collapse" id="navbarNav">
                                     <ul class="navbar-nav">
-                                        <li class="nav-iten top-nav-item">
-                                            <a class="nav-link" href='/login/'><i class="fas fa-user"></i>
+                                        <li class="nav-item top-nav-item">
+                                            <a class="nav-link {% if request.path == '/login/'%} active {% endif %}" href='/login/'><i class="fas fa-user"></i>
                                                 SignIN</a>
                                         </li>
-                                        <li class="nav-iten top-nav-item">
-                                            <a class="nav-link" href='/register/'>SignUP</a>
+                                        <li class="nav-item top-nav-item">
+                                            <a class="nav-link {% if request.path == '/register/'%} active {% endif %}" href='/register/'>SignUP</a>
                                         </li>
                                     </ul>
                                 </div>
+
                             </div>
                         </nav>
                     </div>
