--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,49 +5,52 @@
 
 <div class="registration-form">
 	<h1 class="text-center">Registration Form</h1>
+    {% if error %}
+        <div class="">ERROR</div>
+    {% endif %}
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-body">
-                        <form id="registrationForm" method="post">
+                        <form id="registrationForm" method="post" action="/">
                             {% csrf_token %}
                             <div class="row">
                                 <div class="col-md-12 mb-4">
                                   	<div data-mdb-input-init class="form-outline">
-                                        <p>{{value}}</p>
 										<label class="form-label" for="firstName">Name</label>
-                                        {% if username %}
-                                            <p>Welcome, {{ username }}!</p>
-                                        {% endif %}
-                                    	<input type="text" id="name" name= "name" class="form-control form-control-lg" />
+                                        {{form.name}}
+                                    	{% comment %} <input type="text" id="name" name= "name" value="{{name}}" class="form-control form-control-lg" /> {% endcomment %}
                                   	</div>
                                 </div>
                             </div>
-
 
                             <div class="row">
                                 <div class="col-md-6 mb-4 pb-2">
                                   	<div data-mdb-input-init class="form-outline">
                                     	<label class="form-label" for="emailAddress">Email</label>
-                                    	<input type="email" id="emailAddress" class="form-control form-control-lg" />
+                                    	{{form.email}}
+                                        {% comment %} <input type="email" id="emailAddress"name="email"value="{{email}}" class="form-control form-control-lg" /> {% endcomment %}
                                   	</div>
                                 </div>
                                 <div class="col-md-6 mb-4 pb-2">
                                   	<div data-mdb-input-init class="form-outline">
                                     	<label class="form-label" for="phoneNumber">Phone Number</label>
-                                    	<input type="tel" id="phoneNumber" class="form-control form-control-lg" />
+                                    	{{form.contact}}
+                                        {% comment %} <input type="tel" id="phoneNumber"name="contact" value="{{contact}}"class="form-control form-control-lg" /> {% endcomment %}
                                   	</div>
                                 </div>
                             </div>
+
 							<div class="row">
 								<div class="col-12">
 									<label class="form-label select-label">Choose User Type</label>
-									<select class="select form-control-lg" style="width:100%">
+                                    {{form.user}}
+									{% comment %} <select class="select form-control-lg" style="width:100%">
 										<option value="1">Choose option</option>
 										<option value="2">Student</option>
 										<option value="3">Instructor</option>
-									</select>
+									</select> {% endcomment %}
 								</div>
                             </div>
                            
